--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     
             </div><hr>
         <div class="cover-containerr">
-            <img src="C:\Users\lenovo\Documents\viora4\blogs\images\Screenshot 2025-03-09 210944.png" alt="Cover Photo" class="cover-image">
+            <img src="images/Screenshot 2025-03-09 210944.png" alt="Cover Photo" class="cover-image">
             <h1 class="cover-title">"Is US still helping Ukraine?"</h1>
        </div>
     
