--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <div class="cover-container">
-        <img src="C:\Users\lenovo\Documents\viora4\blogs\images\trump.png" alt="Cover Photo" class="cover-image">
+        <img src="images/trump.png" alt="Cover Photo" class="cover-image">
         <h1 class="cover-title">"Trump US economy transition analysis"</h1>
     </div>
 
