--- a/index.html
+++ b/index.html
@@ -10,6 +10,54 @@
             padding: 0;
             box-sizing: border-box;
         }
+        
+     footer {
+      background: #1E3A8A;
+      color: white;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      margin-top: 40px;
+    }
+
+    .footer-left,
+    .footer-center,
+    .footer-right {
+      flex: 1;
+      text-align: center;
+    }
+
+    .footer-left {
+      text-align: left;
+    }
+
+    .footer-right {
+      text-align: right;
+    }
+
+    .footer-center h2 {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+
+    .footer-left p,
+    .footer-right p {
+      margin: 5px 0;
+    }
+
+    .footer-left a,
+    .footer-right a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    .footer-left a:hover,
+    .footer-right a:hover {
+      text-decoration: underline;
+    }
         hr {
            border: 0;
            height: 2px;
@@ -163,5 +211,14 @@
                 The international community is closely monitoring these developments, as the outcomes of the Riyadh talks could significantly impact the trajectory of the conflict in Ukraine.
                 
                 </div> <hr></div>   </div>
+       <footer>
+    <!-- Left Side -->
+    <div class="footer-left">
+      <a href="https://viora4.netlify.app/">Home</a>
+        <a href="https://viora4-news-blogs.netlify.app/">News</a>
+      <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
+      <p>Phone: 03199729298</p>
+      <p>Email: mindmentor2025@gmail.com</p>
+    </div>
 </body>
 </html>
