--- a/index.html
+++ b/index.html
@@ -219,6 +219,17 @@
       <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
       <p>Phone: 03199729298</p>
       <p>Email: mindmentor2025@gmail.com</p>
+            <!-- Center -->
+    <div class="footer-center">
+      <h2>Viora4</h2><br>
+        <h2>@viora4 2025</h2>
+    </div>
+
+    <!-- Right Side -->
+    <div class="footer-right">
+      <p>Address: Islamabad 44000, Pakistan</p>
+    </div>
+
     </div>
 </body>
 </html>
