--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@
        <footer>
     <!-- Left Side -->
     <div class="footer-left">
-      <h2><a href="https://viora4.netlify.app/">Home</a></h2>
-       </h2> <a href="https://viora4-news-blogs.netlify.app/">News</a></h2>
-      </h2><a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a></h2>
+      <a href="https://viora4.netlify.app/">Home</a>
+        <a href="https://viora4-news-blogs.netlify.app/">News</a>
+      <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
       <p>Phone: +92 319-972-929-8</p>
       <p>Email: mindmentor2025@gmail.com</p>
             <!-- Center -->
     <div class="footer-center">
-      <h2>Viora4</h2><br>
-        <h2>@rights viora4 2025</h2>
+      <h2>Viora4</h2>
+      
     </div>
 
     <!-- Right Side -->
