--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
                                         <a href="https://viora4.netlify.app/">Home</a>
                                         <a href="https://viora4-news-blogs.netlify.app/">News</a>
                                         <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
+                                        <a href="https://viora4-blogs.netlify.app/">Blogs</a>
                                         <a href=""></a>
                                     </div>
                                     <div>
