--- a/index.html
+++ b/index.html
@@ -119,6 +119,96 @@
         <h1 class="cover-title">"Trump US economy transition analysis"</h1>
     </div>
 
+
+<div class="navbar">
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+    <div class="nav-links">
+        <a href="#" class="active">Latest</a>
+        <a href="https://viora4.netlify.app/">Home</a>
+        <a href="https://viora4-news-blogs.netlify.app/">News</a>
+        <a href="https://viora4-blogs.netlify.app/">Blogs</a>
+        <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+    </div>
+</div>
+
+<script>
+    function toggleMenu() {
+        const nav = document.querySelector('.nav-links');
+        nav.style.display = (nav.style.display === 'flex') ? 'none' : 'flex';
+    }
+</script>
+    <style>    .navbar {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px 20px;
+            border-bottom: 2px solid #ddd;
+            background: #fff;
+            position: relative;
+        }
+        .nav-links {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+        .nav-links a {
+            text-decoration: none;
+            color: #555;
+            font-size: 14px;
+            padding: 8px 12px;
+        }
+        .nav-links a.active {
+            font-weight: bold;
+            border-bottom: 2px solid black;
+            padding-bottom: 3px;
+        }
+        .nav-links a:hover {
+            color: black;
+        }
+
+        /* Toggle button (hidden by default) */
+        .menu-toggle {
+            display: none;
+            font-size: 22px;
+            cursor: pointer;
+            background: none;
+            border: none;
+            position: absolute;
+            top: 10px;
+            right: 20px;
+        }
+
+        /* Mobile view */
+        @media screen and (max-width: 600px) {
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                text-align: center;
+                width: 100%;
+                position: absolute;
+                top: 50px;
+                left: 0;
+                background: #fff;
+                border-top: 1px solid #ddd;
+                padding: 10px 0;
+            }
+            .nav-links a {
+                padding: 10px;
+                display: block;
+            }
+            .menu-toggle {
+                display: block;
+            }
+        }
+
+</style>
+
+
+    
     <div class="blog-content">
         <div class="blog-post">
             <h2>Trudeau hits out at 'dumb' tariffs as Trump warns of further hikes against Canada</h2>
@@ -388,6 +478,8 @@
                                     <div>
                                         <a href="https://viora4.netlify.app/">Home</a>
                                         <a href="https://viora4-news-blogs.netlify.app/">News</a>
+                                    <a href="https://viora4-latest.netlify.app/">Latest</a>
+
                                         <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
                                         <a href="https://viora4-blogs.netlify.app/">Blogs</a>
                                         <a href=""></a>
