--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             height: 20vh;
             position: relative;
             margin-bottom: 2rem;
+            width:130vh;
         }
         
         .cover-containerr {
